; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/ti/extr_tlan.c_tlan_handle_tx_eoc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/ti/extr_tlan.c_tlan_handle_tx_eoc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i64 }
%struct.tlan_priv = type { i32, i32, i64, i64, %struct.tlan_list*, i32 }
%struct.tlan_list = type { i32 }

@TLAN_DEBUG_TX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [53 x i8] c"TRANSMIT:  handling TX EOC (Head=%d Tail=%d) -- IRQ\0A\00", align 1
@TLAN_CSTAT_READY = common dso_local global i32 0, align 4
@TLAN_CH_PARM = common dso_local global i64 0, align 8
@TLAN_HC_GO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i32)* @tlan_handle_tx_eoc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tlan_handle_tx_eoc(%struct.net_device* %0, i32 %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.tlan_priv*, align 8
  %6 = alloca %struct.tlan_list*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load %struct.net_device*, %struct.net_device** %3, align 8
  %10 = call %struct.tlan_priv* @netdev_priv(%struct.net_device* %9)
  store %struct.tlan_priv* %10, %struct.tlan_priv** %5, align 8
  store i32 1, i32* %8, align 4
  %11 = load %struct.tlan_priv*, %struct.tlan_priv** %5, align 8
  %12 = getelementptr inbounds %struct.tlan_priv, %struct.tlan_priv* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = icmp slt i32 %13, 48
  br i1 %14, label %15, label %65

15:                                               ; preds = %2
  %16 = load i32, i32* @TLAN_DEBUG_TX, align 4
  %17 = load %struct.tlan_priv*, %struct.tlan_priv** %5, align 8
  %18 = getelementptr inbounds %struct.tlan_priv, %struct.tlan_priv* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.tlan_priv*, %struct.tlan_priv** %5, align 8
  %21 = getelementptr inbounds %struct.tlan_priv, %struct.tlan_priv* %20, i32 0, i32 5
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @TLAN_DBG(i32 %16, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0), i32 %19, i32 %22)
  %24 = load %struct.tlan_priv*, %struct.tlan_priv** %5, align 8
  %25 = getelementptr inbounds %struct.tlan_priv, %struct.tlan_priv* %24, i32 0, i32 4
  %26 = load %struct.tlan_list*, %struct.tlan_list** %25, align 8
  %27 = load %struct.tlan_priv*, %struct.tlan_priv** %5, align 8
  %28 = getelementptr inbounds %struct.tlan_priv, %struct.tlan_priv* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds %struct.tlan_list, %struct.tlan_list* %26, i64 %30
  store %struct.tlan_list* %31, %struct.tlan_list** %6, align 8
  %32 = load %struct.tlan_priv*, %struct.tlan_priv** %5, align 8
  %33 = getelementptr inbounds %struct.tlan_priv, %struct.tlan_priv* %32, i32 0, i32 3
  %34 = load i64, i64* %33, align 8
  %35 = load %struct.tlan_priv*, %struct.tlan_priv** %5, align 8
  %36 = getelementptr inbounds %struct.tlan_priv, %struct.tlan_priv* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = sext i32 %37 to i64
  %39 = mul i64 4, %38
  %40 = add i64 %34, %39
  store i64 %40, i64* %7, align 8
  %41 = load %struct.tlan_list*, %struct.tlan_list** %6, align 8
  %42 = getelementptr inbounds %struct.tlan_list, %struct.tlan_list* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = load i32, i32* @TLAN_CSTAT_READY, align 4
  %45 = and i32 %43, %44
  %46 = load i32, i32* @TLAN_CSTAT_READY, align 4
  %47 = icmp eq i32 %45, %46
  br i1 %47, label %48, label %61

48:                                               ; preds = %15
  %49 = load %struct.net_device*, %struct.net_device** %3, align 8
  %50 = call i32 @netif_stop_queue(%struct.net_device* %49)
  %51 = load i64, i64* %7, align 8
  %52 = load %struct.net_device*, %struct.net_device** %3, align 8
  %53 = getelementptr inbounds %struct.net_device, %struct.net_device* %52, i32 0, i32 0
  %54 = load i64, i64* %53, align 8
  %55 = load i64, i64* @TLAN_CH_PARM, align 8
  %56 = add nsw i64 %54, %55
  %57 = call i32 @outl(i64 %51, i64 %56)
  %58 = load i32, i32* @TLAN_HC_GO, align 4
  %59 = load i32, i32* %8, align 4
  %60 = or i32 %59, %58
  store i32 %60, i32* %8, align 4
  br label %64

61:                                               ; preds = %15
  %62 = load %struct.tlan_priv*, %struct.tlan_priv** %5, align 8
  %63 = getelementptr inbounds %struct.tlan_priv, %struct.tlan_priv* %62, i32 0, i32 2
  store i64 0, i64* %63, align 8
  br label %64

64:                                               ; preds = %61, %48
  br label %65

65:                                               ; preds = %64, %2
  %66 = load i32, i32* %8, align 4
  ret i32 %66
}

declare dso_local %struct.tlan_priv* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @TLAN_DBG(i32, i8*, i32, i32) #1

declare dso_local i32 @netif_stop_queue(%struct.net_device*) #1

declare dso_local i32 @outl(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
